--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-# Flask App Secret Key
-SECRET_KEY=your-secret-key-here
-
-# Debug Mode (set to False in production)
+# Flask App Configuration
+SECRET_KEY=your-secret-key
 DEBUG=False
 
-# Database Credentials
-DB_HOST=your-db-host-url
-DB_USER=your-db-username
-DB_PASSWORD=your-db-password
+# Database Configuration (TiDB / MySQL)
+TIDB_HOST=your-database-host
+TIDB_PORT=4000
+TIDB_USER=your-database-username
+TIDB_PASSWORD=your-database-password
+TIDB_DATABASE=your-database-name
